Changed the checkPriceCondition method to accept a null quantity and in that circumstance ignore quantity constraints, in preparation for other methods to find quantity breaks and such for a product according to the price rules
git-svn-id: https://svn.apache.org/repos/asf/incubator/ofbiz/trunk@418915 13f79535-47bb-0310-9956-ffa450edef68